// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePageContainer snapshot with menu props 1`] = `
Array [
  <Banner />,
  <MenuCategory
    itemAmount={6}
    menu={
      Object {
        "_id": 1,
      }
    }
  />,
  <MenuCategory
    itemAmount={6}
    menu={
      Object {
        "_id": 2,
      }
    }
  />,
  <OrderFloatingButton />,
]
`;

exports[`HomePageContainer snapshot without menu props 1`] = `
Array [
  <Banner />,
  <OrderFloatingButton />,
]
`;
